Resolve edit functionality (and add as a result of bug) - revert model image default back to placeholder and add DTL to make visible in menu.html - Amend edit view to account for file upload - comment out additional code in forms.py which prevents image field being empty - form can now submit - for ux - add js to implement image preview

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,15 +239,15 @@ h1 {
 }
 
 /* Amend when adding image */
-/* .image-container {
-    max-width: 100px;
-    max-height: 100px;
+.image-container {
+    max-width: 200px;
+    max-height: 200px;
 }
 
-.image-container > img {
-    max-width: 100px;
-    max-height: 100px;
-} */
+.image-container img {
+    max-width: 200px;
+    max-height: 200px;
+}
 
 /* ----------- Form Styles -------------- */
 /* Hide form */
